# Git-Template-CLI

./: .gitignore  LICENSE  MANIFEST.in  README.md  git-template  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yaml
src/git_template_cli/: cli.py
src/git_template_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/git_template_cli/templates/basic/: LICENSE  README.md
src/git_template_cli/templates/python-service/: main.py
src/git_template_cli/templates/react-component/: COMPONENT_NAME.module.css  README.md
templates/react-component/: COMPONENT_NAME.js
tests/: test_cli.py
